--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch -r dotenv/config src/index.ts",
-  
     "start": "tsx src/index.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
+    "@hono/zod-validator": "^0.5.0",
     "@prisma/client": "^6.7.0",
     "better-auth": "^1.2.7",
     "dotenv": "^16.5.0",
     "hono": "^4.7.8",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
